test-netpol-enforcement/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: protected-webserver
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: protected-webserver
  ports:
    - port: 80
      targetPort: http
