test-netpol-enforcement/templates/networkpolicy-block-egress.yaml
---
# Test egress policies. Pods labelled "egress-internal-only" should be able
# to resolve DNS and connect to the unprotected-webserver:80 service, but not
# unprotected-webserver:81 or public internet webservers.
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-internal-only
spec:
  podSelector:
    matchLabels:
      test-name: egress-internal-only
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: unprotected-webserver
      ports:
        - protocol: TCP
          port: 80
